# AutoGrad

./: README.md  demo.ipynb  pyproject.toml
nn/: module.py  tensor.py  value.py
notebooks/: 6-gpt_dev.ipynb  Untitled.ipynb  backprop_ninja.ipynb  dev-Copy1.ipynb  dev.ipynb  my_autograd.ipynb  torch.ipynb
tests/: test_value.py
