[tool.poetry]
name = "nn"
version = "0.1.0"
description = ""
authors = ["Erik Gafni <egafni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13" 
torch = "^2.1.0"
numpy = "^1.26.1"
matplotlib = "^3.8.1"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.8"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
